# chat-gpt-response

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
chatgpt_response/: openai_gateway.py  pilotController.py  pilotService.py  responseParser.py
tests/: codePilotTest.py  pilotControllerShould.py  pilotResponseParserShould.py  pilotServiceShould.py
